# NanoRender

./: .gitignore  CMakeLists.txt  CMakelists.txt  Matrix.hpp  README.md  Vector.hpp  example_decode.cpp  example_encode.cpp  fragment.cpp  fragment.hpp  global.cpp  global.hpp  main.cpp  objLoader.cpp  objLoader.hpp  plot.cpp  rasterizer.cpp  rasterizer.hpp  scene.hpp  screen.cpp  screen.hpp  test.cpp  triangle.cpp  triangle.hpp
include/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp
include/Fragment/: fragment.h
include/Loader_obj/: objLoader.h
include/Loader_png/: lodepng.h
include/Math/: Matrix.h  Vector.h
include/Rasterizer/: rasterizer.h
include/Scene/: scene.h
include/Screen/: screen.h
include/Texture/: texture.h
include/Triangle/: triangle.h
include/Utility/: global.h
lib/Debug/: Loader_png.lib
lib/Release/: Loader_png.lib
src/: CMakeLists.txt
src/Fragment/: CMakeLists.txt  fragment.cpp
src/Loader_obj/: CMakeLists.txt  objLoader.cpp
src/Loader_png/: CMakeLists.txt  lodepng.cpp
src/Math/: CMakeLists.txt  Matrix.cpp  Vector.cpp
src/Rasterizer/: CMakeLists.txt  rasterizer.cpp
src/Scene/: CMakeLists.txt  scene.cpp
src/Screen/: CMakeLists.txt  screen.cpp
src/Texture/: texture.cpp
src/Triangle/: CMakeLists.txt  triangle.cpp
src/Utility/: CMakeLists.txt  global.cpp
